--- a/airport/static/crews.html
+++ b/airport/static/crews.html
@@ -46,6 +46,8 @@
         </div>
     </nav>
 
+    <section class="w-100" id="alerts"></section>
+
     <section class="container h-100 m-0 p-0">
         <div class="row">
             <div class="col-1"></div>
