--- a/airport/static/crews.html
+++ b/airport/static/crews.html
@@ -55,7 +55,7 @@
         <div class="row">
             <div class="col-1"></div>
             <div class="col-10 align-items-center">
-                <div class="form-group row mt-2 mb-2 ml-auto mr-auto"">
+                <div class="form-group row mt-2 mb-2 ml-auto mr-auto">
                     <label for="dateInput" class="col-form-label col-2">Search date</label>
                     <div class="col-8">
                         <input type="date" id="dateInput" name="search" class="form-control text-center" />
@@ -91,6 +91,7 @@
                     </div>
                 </section>
             <div class="col-1"></div>
+            </div>
         </div>
     </section>
 
